# COSMolKit

./: .gitignore  .gitmodules  AGENTS.md  CNAME  Cargo.toml  README.md  ai_native_features_sketch.md  cow_migration_sketch.md  pyproject.toml  tetrahedral_stereo_representation.md
.github/workflows/: coverage.yml  docs.yml  python-publish.yml
bindings/python/: README.md
bindings/python/cosmolkit/: __init__.py
crates/bio-core/: Cargo.toml
crates/bio-core/src/: lib.rs
crates/chem-core/: Cargo.toml
crates/chem-core/examples/: feature_parity.rs
crates/chem-core/src/: atom.rs  bond.rs  hydrogens.rs  kekulize.rs  lib.rs  smiles.rs  valence.rs
crates/chem-core/tests/: rdkit_atomic_num_parity.rs  rdkit_graph_feature_parity.rs
crates/cosmolkit/: Cargo.toml
crates/cosmolkit-core/: Cargo.toml
crates/cosmolkit-core/examples/: draw_png.rs  draw_svg.rs  feature_parity.rs  minimal_sdf.rs  print_bonds.rs  sdf_to_smiles.rs
crates/cosmolkit-core/src/: adjacency.rs  atom.rs  batch.rs  bio.rs  bond.rs  canon_smiles.rs  distgeom.rs  draw.rs  hydrogens.rs  kekulize.rs  lib.rs  molecule.rs  periodic_table.rs  smiles.rs  smiles_write.rs  stereo.rs  valence.rs
crates/cosmolkit-core/src/data/: rdkit_periodic_rvdw.tsv  rdkit_uff_params.tsv
crates/cosmolkit-core/src/io/: mod.rs  molblock.rs  sdf.rs
crates/cosmolkit-core/src/io/molblock/: tests.rs
crates/cosmolkit-core/tests/: no_rdkit_runtime_dependency.rs  rdkit_dg_bounds_parity.rs  rdkit_graph_feature_parity.rs  rdkit_kekulize_flag_parity.rs  rdkit_prepared_draw_parity.rs  rdkit_sdf_read_parity.rs  rdkit_smiles_writer_parity.rs  rdkit_svg_drawer_parity.rs  tetrahedral_stereo_geometry.rs
crates/cosmolkit-macros/: Cargo.toml
crates/cosmolkit-macros/src/: lib.rs
crates/cosmolkit/src/: lib.rs
crates/io/: Cargo.toml
crates/io/examples/: minimal_sdf.rs
crates/io/src/: lib.rs  molblock.rs  sdf.rs
python/: Cargo.toml  DEV.md  README.md  pyproject.toml
python/docs/source/: api.rst  batch.rst  conf.py  index.rst  installation.rst  io.rst  molecule.rst  quickstart.rst
python/examples/: batch_parallel.py  image_exports.py  immutable_and_editing.py  io_and_properties.py  ndarray_access.py  sanitize_and_standardize.py  smiles_and_dg_bounds.py  substructure_and_fingerprint.py  tetrahedral_stereo.py  three_d_and_alignment.py
python/src/: lib.rs
python/tests/: test_from_rdkit.py  test_value_semantics.py
tests/: README.md  molblock_minimal_smiles.txt  smiles.smi  smiles.txt
tests/scripts/: gen_rdkit_atomic_nums.py  gen_rdkit_dg_bounds_golden.py  gen_rdkit_graph_features.py  gen_rdkit_isomeric_smiles_golden.py  gen_rdkit_kekulize_flags_golden.py  gen_rdkit_kekulize_molblock_golden.py  gen_rdkit_prepared_draw_golden.py  gen_rdkit_sdf_read_golden.py  gen_rdkit_smiles_writer_golden.py  gen_rdkit_svg_golden.py  gen_rdkit_tetrahedral_stereo_geometry.py  gen_rdkit_v2000_minimal_golden.py  rdkit_features_single.py
