[workspace]
members = [
    "crates/cosmolkit-core",
    "crates/cosmolkit",
    "python",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.4"
authors = ["COSMolKit Contributors"]
description = "Core cheminformatics and structural biology toolkit in Rust"
repository = "https://github.com/cosmol-studio/COSMolKit"
homepage = "https://github.com/cosmol-studio/COSMolKit"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
