[package]
name = "cosmolkit-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "cosmolkit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["abi3-py39"] }
cosmolkit-core = { version = "0.0.2", path = "../crates/cosmolkit-core" }
