[package]
name = "cosmolkit-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "cosmolkit"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.3", default-features = false }
pyo3-stub-gen = { version = "0.22.1", default-features = false, optional = true }
cosmolkit-core = { version = "0.0.9", path = "../crates/cosmolkit-core" }

[features]
default = ["release-abi3-py39"]
extension-module = ["pyo3/macros", "pyo3/extension-module"]
release-abi3-py39 = ["extension-module", "pyo3/abi3-py39"]
dev-abi3-py310 = ["extension-module", "pyo3/abi3-py310"]
stubgen = ["dep:pyo3-stub-gen"]
dev-stub = ["dev-abi3-py310", "stubgen"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stubgen"]
