[package]
name = "cosmolkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "cosmolkit_core"
path = "src/lib.rs"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
