[package]
name = "cosmolkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "cosmolkit_core"
path = "src/lib.rs"

[dependencies]
cosmolkit-macros = { path = "../cosmolkit-macros", version = "0.0.9" }
glam = "0.32.1"
resvg = "0.45"
thiserror = "2.0.18"
tiny-skia = "0.11"
usvg = "0.45"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
