[package]
name = "cosmolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "cosmolkit"
path = "src/lib.rs"

[dependencies]
cosmolkit-core = { version = "0.0.5", path = "../cosmolkit-core" }
